# ros_qr_reader

./: .gitignore  requirements.txt
example_copter/: CMakeLists.txt  package.xml
example_copter/src/: copter_direction.cpp
install/: local_setup.sh  setup.sh
install/ros_qr_reader/lib/ros_qr_reader/: qr_code_client  qr_code_service
install/ros_qr_reader/share/ros_qr_reader/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros_qr_reader/: package.xml  setup.cfg  setup.py
ros_qr_reader/ros_qr_reader/: qr_cli.py  qr_pub.py  qr_srv.py  qr_sub.py
vision_direction/: CMakeLists.txt  package.xml
